syntax = "proto3";
package customer;

import "google/api/annotations.proto"; 

// The Customer service definition.
service Customer {   
  // Get all Customers with filter - A server-to-client streaming RPC.
  rpc GetCustomers(CustomerFilter) returns (stream CustomerRequest) {
    option (google.api.http) = {
      get: "/v1/customers"
    };
  }
  // Create a new Customer - A simple RPC 
  rpc CreateCustomer (CustomerRequest) returns (CustomerResponse) {
    option (google.api.http) = {
      post: "/v1/customers"
      body: "*"
    };
  }
  // Health check
  rpc GetHealth (GetHealthRequest) returns (GetHealthResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
  } 
}

// Request message for creating a new customer
message CustomerRequest {
  int32 id = 1;  // Unique ID number for a Customer.
  string name = 2;
  string email = 3;
  string phone= 4;
  
  message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    bool isShippingAddress = 5; 
  }

  repeated Address addresses = 5;
}

message CustomerResponse {
  int32 id = 1;
  bool success = 2;
}
message CustomerFilter {    
  string keyword = 1;
}
message GetHealthRequest {
} 
message GetHealthResponse {
  string hostname = 1;
}
